# network-uri-sandbox

./: Dep.hs  Main.hs  README.md  Test.hs  clean.sh  network-uri-sandbox.cabal
dep1/: dep.cabal
dep1-ex1/: build.sh  ex.cabal
dep2/: dep.cabal
dep2-ex1/: build.sh
dep3/: Dep.hs  dep.cabal
dep3-ex3/: build.sh  ex.cabal
dep4/: dep.cabal
dep4-ex1/: build.sh  ex.cabal
network-uri/: network-uri.cabal
