name:                   dep
version:                0.1
build-type:             Simple
cabal-version:          >= 1.10

flag myflag
  default:              True

library
  exposed-modules:      Dep
  default-language:     Haskell2010
  build-depends:        base
  if flag(myflag)
    build-depends:      network < 2.6
